# fossil-executable

./: Dockerfile  README.md  fossil-gen.py  meson.build  trilobite.py
.github/: Dockerfile
.github/tools/: sanity-format.py  sanity-secure.py  sanity-wraps.py
.github/workflows/: cd_docker.yml  ci_host_tester.yaml  ci_pipline.yaml  ci_proj_builder.yaml  codeql.yml  meson_ci.yml  sanity_ci.yml
code/: app.c  app.h  main.c  meson.build
data/: meson.build
subprojects/: fossil-sdk.wrap  fossil-test.wrap  fscl-xcore-c.wrap  fscl-xstring.wrap  fscl-xtest-c.wrap  fscl-xtool-c.wrap  trilo-xcore-c.wrap  trilo-xdata-c.wrap  trilo-xmath-c.wrap  trilo-xtype-c
test/: generate-runner.py  meson.build  xtest_cases.c  xunit_runner.c
